solved z-index problem for IE7

--- a/ribbon/ribbon.css
+++ b/ribbon/ribbon.css
@@ -125,6 +125,7 @@ body
 	background-repeat: no-repeat !important;
 	background-position: center bottom !important;
 	padding-bottom:14px !important;
+	z-index:15 !important;
 }
 
 #ribbon .arrow-down-small {
@@ -132,6 +133,7 @@ body
 	background-repeat: no-repeat !important;
 	background-position: right center !important;
 	padding-right:12px !important;
+	z-index:15 !important;
 }
 
 #ribbon .ribbon-tab-header:hover
@@ -422,6 +424,7 @@ body
 	border-radius: 3px 3px 3px 3px;
 	display:block;
 	position: relative;
+	z-index:10;
 }
 
 #ribbon .ribbon-button-large
@@ -438,7 +441,6 @@ body
 	height: 14px;
 	text-align: left;
 	margin:3px 0;
-	z-index: auto;
 }
 
 #ribbon .ribbon-button .button-help
